--- a/index.html
+++ b/index.html
@@ -8,8 +8,14 @@
     <link rel="stylesheet" type="text/css" href="./css/styles.css">
 </head>
 <body>
-    <h1>Pokedex</h1>
-    <ul class="pokemon-list"></ul>
+    <header>
+        <div class="container">
+            <h1 class="main-title">Pokedex</h1>
+            <ul class="pokemon-list"></ul>
+        </div>
+        <div class="modal-container"></div>
+
+    </header>
 
     <script src="./js/promise-polyfill.js"></script>
     <script src="./js/fetch-polyfill.js"></script>
