--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <a class="navbar-brand">Pokedex</a>
         <form class="form-inline">
             <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+            <button class="btn btn-outline-success my-2 my-sm-0" data-target="#navbar" type="submit">Search</button>
         </form>
     </nav>
 
