--- a/index.html
+++ b/index.html
@@ -4,43 +4,40 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simple JS App</title>
+    <title>Pokedox</title>
+    <link rel="icon" href="./img/favicon-32x32.png">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="./css/styles.css">
 </head>
 <body>
 <!--Add Navbar-->
-    <nav class="navbar fixed-top navbar-light bg-light">
-        <a class="navbar-brand">Pokedex</a>
-        <form class="form-inline">
-            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success my-2 my-sm-0" data-target="#navbar" type="submit">Search</button>
+    <nav class="navbar fixed-top">
+        <h1 class="navbar-brand">Pokedex</h1>
+        <form class="navbar-form form-inline">
+            <input class="form-control search" type="search" placeholder="Search" aria-label="Search">
         </form>
     </nav>
-
-    <div class="pokedex"> 
-        <h1 class="pokedex-header">Pokedex</h1>
-        <ul class="pokemon-list list-group"></ul>
-    </div>
-
+    <main class="pokedex"> 
+        <ul class="pokemon-list list-group list-group-horizontal row"></ul>
 <!-- Add modal-->
-    <div class="modal fade" id="pokemon-modal" tabindex="-1" role="dialog"      aria-labelledby="pokemon-modal" aria-modal="true"> 
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h2 class="modal-title"></h2>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
-                <div class="modal-body"></div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <div class="modal fade" id="pokemon-modal" tabindex="-1" role="dialog" aria-labelledby="pokemon-modal" aria-modal="true"> 
+            <div class="modal-dialog modal-dialog-centered" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h2 class="modal-title"></h2>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body"></div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
+    </main>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
