--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
     <link rel="icon" href="./img/favicon-32x32.png">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="./dist/styles.min.js">
+    <link rel="stylesheet" type="text/css" href="dist/styles.min.js">
 </head>
 <body>
 <!--Add Navbar-->
     <nav class="navbar fixed-top">
-        <h1 class="navbar-brand">Pokedex</h1>
+        <img src="./img/ball-clipart-pokemon.png" width="3%" alt="logo">
+        <a class="navbar-brand navbar-link" href="/index.html">Pokedox</a>
         <form class="navbar-form form-inline">
             <input class="form-control search" type="search" placeholder="Search" aria-label="Search" id="search-input"/>
             <button class="btn btn-outline-success my-2 my-sm-0" type="submit">
@@ -64,6 +65,6 @@
         crossorigin="anonymous"></script>
     <script src="./js/promise-polyfill.js"></script>
     <script src="./js/fetch-polyfill.js"></script>
-    <script src="./dist/scripts.min.js"></script>
+    <script src="dist/scripts.min.js"></script>
 </body>
 </html>
