--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <!--Add Navbar-->
     <nav class="navbar fixed-top">
         <img src="./img/ball-clipart-pokemon.png" width="3%" alt="logo">
-        <a class="navbar-brand navbar-link" href="/index.html">Pokedox</a>
+        <a class="navbar-brand navbar-link" href="https://stellacea.github.io/simple-js-app/">Pokedox</a>
         <form class="navbar-form form-inline">
             <input class="form-control search" type="search" placeholder="Search" aria-label="Search" id="search-input"/>
             <button class="btn btn-outline-success my-2 my-sm-0" type="submit">
